tests/ui/parser/tuple-index-suffix-proc-macro.stderr
warning: suffixes on a tuple index are invalid
  --> $DIR/tuple-index-suffix-proc-macro.rs:16:28
   |
LL |     aux::bad_tup_indexing!(0usize);
   |                            ^^^^^^ invalid suffix `usize`
   |
   = help: `usize` is *temporarily* accepted on tuple index fields as it was incorrectly accepted on stable for a few releases
   = help: on proc macros, you'll want to use `syn::Index::from` or `proc_macro::Literal::*_unsuffixed` for code that will desugar to tuple field access
   = help: see issue #60210 <https://github.com/rust-lang/rust/issues/60210> for more information

warning: suffixes on a tuple index are invalid
  --> $DIR/tuple-index-suffix-proc-macro.rs:18:47
   |
LL |     aux::bad_tup_struct_indexing!(tup_struct, 0isize);
   |                                               ^^^^^^ invalid suffix `isize`
   |
   = help: `isize` is *temporarily* accepted on tuple index fields as it was incorrectly accepted on stable for a few releases
   = help: on proc macros, you'll want to use `syn::Index::from` or `proc_macro::Literal::*_unsuffixed` for code that will desugar to tuple field access
   = help: see issue #60210 <https://github.com/rust-lang/rust/issues/60210> for more information

error: suffixes on a tuple index are invalid
  --> $DIR/tuple-index-suffix-proc-macro.rs:23:28
   |
LL |     aux::bad_tup_indexing!(0u8);
   |                            ^^^ invalid suffix `u8`

error: suffixes on a tuple index are invalid
  --> $DIR/tuple-index-suffix-proc-macro.rs:25:47
   |
LL |     aux::bad_tup_struct_indexing!(tup_struct, 0u64);
   |                                               ^^^^ invalid suffix `u64`

error: aborting due to 2 previous errors; 2 warnings emitted

